<resources>
    <string name="app_name">Marco</string>
    <string name="create_trip_button">Criar Viagem</string>
    <string name="current_trip_button">Viagem Atual</string>
    <string name="list_trips_button">Listar Viagens</string>
    <string name="nearby_button">Aqui por Perto</string>
    <string name="gostos">Preferências</string>
    <string name="current_trip">Recife, PE - 12/2016</string>
    <string name="trip2">Gramado, RS - 06/2016</string>
    <string name="trip3">Chapa Diamantina, BA - 12/2015</string>

    <string name="title_activity_gostos">GostosActivity</string>

    <string name="title_activity_create_trip">Criar Viagem</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="marco">Marco</string>
    <string name="perfil">Perfil</string>

    <string name="title_activity_maps">Mapa do Roteiro</string>
    <string name="title_activity_list_trips">Histórico de Viagens</string>

    <string name="facebook_app_id">330829883957070</string>
    <string name="fb_login_protocol_scheme">fb330829883957070</string>

    <string name="next">Próximo</string>
    <string name="skip">Voltar</string>
    <string name="start">Começar</string>
    <string name="title_activity_viagem_atual">ViagemAtualActivity</string>

</resources>
